k8s/envoy-x509/k8s/backend/cis/envoy_cloudkms.yaml
node:
  id: "bytedance_zti"
  cluster: "bytedance_cluster"
static_resources:
  listeners:
    - name: bytedance_https_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9001
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                forward_client_cert_details: sanitize_set
                set_current_client_cert_details:
                  uri: true
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                  - name: envoy.file_access_log
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: "/tmp/inbound-proxy.log"
                http_filters:
                  - name: envoy.filters.http.router
                route_config:
                  name: bytedance_route
                  virtual_hosts:
                    - name: bytedance_service
                      domains: ["*"]
                      request_headers_to_add:
                        - header:
                            key: "X-SSL-Subject"
                            value: "%DOWNSTREAM_PEER_SUBJECT%"
                        - header:
                            key: "X-SSL-Issuer"
                            value: "%DOWNSTREAM_PEER_ISSUER%"
                        - header:
                            key: "X-SSL-Notbefore"
                            value: "%DOWNSTREAM_PEER_CERT_V_START%"
                        - header:
                            key: "X-SSL-Notafter"
                            value: "%DOWNSTREAM_PEER_CERT_V_END%"
                        - header:
                            key: "X-SSL-Serial"
                            value: "%DOWNSTREAM_PEER_SERIAL%"
                        - header:
                            key: "X-SSL-Cipher"
                            value: "%DOWNSTREAM_TLS_CIPHER%"
                        - header:
                            key: "X-SSL-Certificate"
                            value: "%DOWNSTREAM_PEER_CERT%"
                        - header:
                            key: "X-SSL-SHA1"
                            value: "%DOWNSTREAM_PEER_FINGERPRINT_1%"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: bytedance_service
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificate_sds_secret_configs:
                  name: default
                  sds_config:
                    api_config_source:
                      transport_api_version: V3
                      api_type: GRPC
                      grpc_services:
                        - envoy_grpc:
                            cluster_name: spire_agent
                combined_validation_context:
                  # validate the SPIFFE ID of incoming clients (optionally)
                  default_validation_context:
                    match_subject_alt_names:
                      - safe_regex:
                          regex: "^spiffe://.*/ns_.*?/r_.*?/az_.*?/c_.*?/.*$"
                          google_re2:
                            max_program_size: 200
                  # obtain the trust bundle from SDS
                  validation_context_sds_secret_config:
                    name: ROOTCA
                    sds_config:
                      api_config_source:
                        api_type: GRPC
                        transport_api_version: V3
                        grpc_services:
                          - envoy_grpc:
                              cluster_name: spire_agent
                tls_params:
                  ecdh_curves:
                    - X25519:P-256:P-521:P-384
  clusters:
    - name: spire_agent
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: spire_agent
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    pipe:
                      path: /run/spire/sockets/api.sock
    - name: bytedance_service
      connect_timeout: 5s
      load_assignment:
        cluster_name: bytedance_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8888
